--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -11,8 +11,7 @@
 #   - dist/**/*.js
 #
 src_files:
-  - public/javascripts/**/*.js
-
+  - src/*.js
 # stylesheets
 #
 # Return an array of stylesheet filepaths relative to src_dir to include before jasmine specs.
@@ -63,7 +62,6 @@ spec_files:
 # src_dir: public
 #
 src_dir:
-
 # spec_dir
 #
 # Spec directory path. Your spec_files must be returned relative to this path.
@@ -132,4 +130,3 @@ boot_files:
 # random: true
 #
 random:
-
